salesforce/force-app/main/default/objects/Inbound_Message__c/Inbound_Message__c.object-meta.xml
<CustomObject>
    <description>A captured email, SMS or share. The body stored here is ALREADY MASKED by the Cloudflare Worker - unmasked text never reaches Salesforce. Bodies are blanked after RawBodyRetentionDays.</description>
    <label>Inbound Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Inbound Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>