salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Body_Masked__c.field-meta.xml
<CustomField>
    <fullName>Body_Masked__c</fullName>
    <description>Masked message body. Evidence quotes are validated against THIS text, so it must be kept verbatim as received. Purged after RawBodyRetentionDays.</description>
    <label>Body (Masked)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>