salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Candidate_Matches_JSON__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Matches_JSON__c</fullName>
    <description>Scored candidate purchases, so the review UI can offer a pick-list instead of a free search.</description>
    <label>Candidate Matches JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>