salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>0-100. Below ReviewConfidence goes to the review queue silently; between that and AutoApplyConfidence also sends a push asking Gitanjali to confirm.</description>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>