salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Gmail messageId, or sha256(sender+body+minute) for SMS. Unique, so re-delivery of the same message is a no-op.</description>
    <label>Dedupe Key</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>