salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Extraction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_JSON__c</fullName>
    <description>The validated extraction. Fields whose evidence quote failed validation are nulled before this is stored.</description>
    <label>Extraction JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>