salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Parser__c.field-meta.xml
<CustomField>
    <fullName>Parser__c</fullName>
    <description>Rule class name, or PromptTemplate:Dakiya_Extract when the LLM handled it.</description>
    <label>Parser</label>
    <length>80</length>
    <type>Text</type>
</CustomField>