salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Parsed (Rule)</fullName>
                </value>
                <value>
                    <fullName>Parsed (LLM)</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>