salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Related_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Related_Purchase__c</fullName>
    <label>Related Purchase</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Inbound Messages</relationshipLabel>
    <relationshipName>Inbound_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>