salesforce/force-app/main/default/objects/Inbound_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>Email address or SMS DLT header. Used to select a parser.</description>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>